# llm_social_simulation

./: .gitignore  .pre-commit-config.yaml  Open_Renewable_Resource_Game_Specification.md  README.md  Roadmap.md  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml  lint.yml
llm_social_simulation/models/: __init__.py  client.py  mock_client.py  openai_client.py  openrouter_client.py  schema.py  toolkit.py  types.py
llm_social_simulation/models/tests/: test_cache_and_replay.py  test_mock_client.py  test_openai_provider.py  test_schema.py  try_openrouter.py
llm_social_simulation/simulation/: agents_rule_based.py  analytics.py  engine.py  gameworld.py  run_open_resources_baseline.py  test_engine_dummy.py  test_gameworld_smoke.py  test_open_resources_contract.py  test_open_resources_dynamics.py  test_open_resources_runner_smoke.py
