[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-social-simulation"
version = "0.1.0"
description = "Multi-agent social simulation toolkit"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "pre-commit>=3.8",
  "mypy>=1.8",
]

[tool.pytest.ini_options]
testpaths = ["llm_social_simulation"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
files = ["llm_social_simulation/models"]
